# privatise

./: .gitignore  Cargo.toml  README.md  entropy_checkery.py  lalalal.txt  package.json  pnpm-lock.yaml  testings.py  worker-configuration.d.ts  wrangler.jsonc
privatise-cli/: Cargo.toml
privatise-cli/src/: api.rs  main.rs  tests.rs
public/: index.html
src/: create.sql  index.ts
