[package]
name = "privatise-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.22.1"
better-panic = "0.3.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
